--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,24 @@
         input[type="file"], select, button {
             margin: 10px 0;
         }
+        #progress {
+            margin-top: 20px;
+        }
+        .progress-bar {
+            width: 100%;
+            background-color: #f3f3f3;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+        .progress-bar span {
+            display: block;
+            height: 20px;
+            background-color: #4caf50;
+            width: 0;
+            text-align: center;
+            color: white;
+            line-height: 20px;
+        }
     </style>
 </head>
 <body>
@@ -38,6 +56,31 @@
             </select><br>
             <button type="submit">Translate and Download</button>
         </form>
+        <div id="progress">
+            <div class="progress-bar">
+                <span id="progress-bar-text">0%</span>
+            </div>
+        </div>
     </div>
+
+    <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
+    <script>
+        const socket = io();
+
+        socket.on('connect', () => {
+            console.log('Connected to Socket.IO server');
+        });
+
+        socket.on('progress', function(data) {
+            console.log('Progress update:', data); // Debug statement
+            const progress = data.progress;
+            document.querySelector('.progress-bar span').style.width = progress + '%';
+            document.querySelector('#progress-bar-text').textContent = Math.round(progress) + '%';
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected from Socket.IO server');
+        });
+    </script>
 </body>
 </html>
