--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,13 @@
             <label for="language">Select language:</label>
             <select id="language" name="language" required>
                 <option value="az">Azerbaijani</option>
+                <option value="de">German</option>
+                <option value="es">Spanish</option>
+                <option value="fr">French</option>
+                <option value="it">Italian</option>
+                <option value="ka">Georgian</option>
                 <option value="ru">Russian</option>
+                <option value="tr">Turkish</option>                
                 <!-- Add more language options here -->
             </select>
             
